fixed horizontal overflow

--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -113,7 +113,6 @@ body {
 .content-three {
     background-color: #e5e7eb;
     margin: 0;
-    padding: 60px;
     width: 100%;
     display: flex;
     flex-direction: column;
